# apps/data-plane-api/openapi/data-plane.internal.v1.json
@@ -401,6 +401,10 @@
                                     "target": {
                                       "type": "string",
                                       "minLength": 1
+                                    },
+                                    "credentialPrefix": {
+                                      "type": "string",
+                                      "minLength": 1
                                     }
                                   },
                                   "required": ["type", "target"],
@@ -2942,6 +2946,10 @@
                                         "enum": ["header"]
                                       },
                                       "target": {
+                                        "type": "string",
+                                        "minLength": 1
+                                      },
+                                      "credentialPrefix": {
                                         "type": "string",
                                         "minLength": 1
                                       }
